// Copyright 2021 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package cast.utils;

import "chromecast/cast_core/grpc/test_service_messages.proto";

option optimize_for = LITE_RUNTIME;

// An unary test service.
service SimpleService {
  // Makes an unary test call.
  rpc SimpleCall(TestRequest) returns (TestResponse);
}

// A server streaming test service.
service ServerStreamingService {
  // Makes a server streaming test call.
  rpc StreamingCall(TestRequest) returns (stream TestResponse);
}

// The request is added here to verify the build rules.
message TestExtraRequest {
  string extra = 1;
}
